[package]
name = "velox"
version = "0.1.0"
authors = ["dev-sinpy <dev.sinpy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webview_official = "0.0.3"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyfiledialogs = "3.3.10"
content_inspector = "0.2.4"
notify-rust = "4"
custom_error = "1.8.0"