[package]
name = "velox"
description = "Velox is a framework that focuses on simplicity, performance and ease of use. It allows you to build cross platform native apps using web-technology. Velox uses webview and rust under the hood which helps to keep the binary size to absolute minimal and increasing the performance."
version = "0.1.0"
authors = ["dev-sinpy <dev.sinpy@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.0"
toml = "0.5.8"
tinyfiledialogs = "3.3.10"
content_inspector = "0.2.4"
notify-rust = "4"
custom_error = "1.8.0"
tungstenite = "*"
threadpool = "*"
tiny_http = "0.7.0"
portpicker = "0.1.0"